tests/build/cases/ui_node/incorrect_assign_token.stderr
error: expected `delegate = <expr>`
 --> cases/ui_node/incorrect_assign_token.rs:5:5
  |
5 |     delegate: &self.0,
  |     ^^^^^^^^

warning: unused import: `UiNode`
 --> cases/ui_node/incorrect_assign_token.rs:1:48
  |
1 | use zero_ui::prelude_wgt::{ui_node, NilUiNode, UiNode};
  |                                                ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
